force-app/main/default/objects/Access_Request__c/Access_Request__c.object-meta.xml
<CustomObject>
    <description>Holds information related to Privileged Access Management request submissions by users</description>
    <label>Access Request</label>
    <nameField>
        <displayFormat>PAM-{00000000}</displayFormat>
        <label>Access Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>