force-app/main/default/objects/Access_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto-calculated approver, based on requesting user and global APM approver in custom settings</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Access_Requests_for_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>