force-app/main/default/objects/Access_Request__c/fields/Approver_ID__c.field-meta.xml
<CustomField>
    <fullName>Approver_ID__c</fullName>
    <description>The Approver ID used to protect self approvals</description>
    <label>Approver ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>