force-app/main/default/objects/Access_Request__c/fields/Automations_to_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Automations_to_Bypass__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Request to bypass automations</description>
    <label>Automations to Bypass</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Automations_to_Bypass</valueSetName>
    </valueSet>
</CustomField>