force-app/main/default/objects/Access_Request__c/fields/Duration_hrs__c.field-meta.xml
<CustomField>
    <fullName>Duration_hrs__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>TEXT(2)</defaultValue>
    <description>Intended duration for privileged access session in hours</description>
    <inlineHelpText>Intended duration for privileged access session in hours</inlineHelpText>
    <label>Duration (hrs)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>