force-app/main/default/objects/Access_Request__c/fields/Expected_Start__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start__c</fullName>
    <complianceGroup>Source - Salesforce;Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>Captures the start date and time of privileged access session (this is to allow users to submit for future access)</description>
    <inlineHelpText>Expected start date and time for future privileged access</inlineHelpText>
    <label>Expected Start</label>
    <type>DateTime</type>
</CustomField>