force-app/main/default/objects/Access_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <complianceGroup>Source - Salesforce;Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>Reason for the access request for privileged access</description>
    <inlineHelpText>Reason for the access request for privileged access</inlineHelpText>
    <label>Reason</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>