force-app/main/default/objects/Access_Request__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Accurate;Privacy_Non_Personal_Information</complianceGroup>
    <description>Reference Number to a job, Jira story or CR</description>
    <inlineHelpText>Reference Number to a job, Jira story or CR</inlineHelpText>
    <label>Reference Number</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>