force-app/main/default/objects/Access_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user to receive privileged access</description>
    <inlineHelpText>The user to receive privileged access</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>