force-app/main/default/objects/Access_Request__c/fields/Trace_Id__c.field-meta.xml
<CustomField>
    <fullName>Trace_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Records a queue trace Id per PAM request which will be used throughout its life cycle for tracking purposes on Application Trace Log big object</description>
    <label>Trace Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>