force-app/main/default/objects/Access_Request__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <description>Captures if the user requires immediate or future access</description>
    <label>When</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>