force-app/main/default/objects/Access_Request__c/recordTypes/Bypass_Automation_Request.recordType-meta.xml
<RecordType>
    <fullName>Bypass_Automation_Request</fullName>
    <active>true</active>
    <label>Bypass Automation Request</label>
</RecordType>