force-app/main/default/objects/Access_Request__c/recordTypes/Privileged_Access_requests.recordType-meta.xml
<RecordType>
    <fullName>Privileged_Access_requests</fullName>
    <active>true</active>
    <label>Privileged Access requests</label>
</RecordType>