force-app/main/default/objects/Access_Request__c/validationRules/VR01_Start_Date_Mandatory_Future_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Start_Date_Mandatory_Future_Request</fullName>
    <active>true</active>
    <description>Expected Start Date/Time mandatory for future privileged access requests</description>
    <errorConditionFormula>ISPICKVAL(When__c, &apos;Future&apos;) &amp;&amp; ISNULL(Expected_Start__c)</errorConditionFormula>
    <errorDisplayField>Expected_Start__c</errorDisplayField>
    <errorMessage>Expected Start Date/Time mandatory for future privileged access requests</errorMessage>
</ValidationRule>