force-app/main/default/objects/Access_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Requestor__c</columns>
    <columns>Reference_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Access_Type__c</columns>
    <columns>When__c</columns>
    <columns>Duration_hrs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>