force-app/main/default/objects/Access_Request__c/listViews/My_Access_Requests.listView-meta.xml
<ListView>
    <fullName>My_Access_Requests</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Requestor__c</columns>
    <columns>Status__c</columns>
    <columns>Access_Type__c</columns>
    <columns>When__c</columns>
    <columns>Duration_hrs__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Access Requests</label>
</ListView>